# cproc

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  cproc-exe.prof  cproc.cabal  cproc.nimble  fourmolu.yaml  package.yaml  pyproject.toml  stack.yaml
app/: Main.hs
cproc/: __main__.py  args.py  lexer.py  opts.py  process.py  source_lines.py  token.py
src/: Lib.hs
src/Lib/: AST.hs  Lexer.hs  Parser.hs  Process.hs  SourceLines.hs  Token.hs
test/: punct.cproc
tests/: hello.cproc  punct.cproc  test.c
