[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.0.291",
    "mypy>=1.5.1",
]

[project]
name = "cproc"
version = "0.0.1"
description = "C without Preprocessor"
authors = [{ name = "Kyle Coffey", email = "me@phytolizer.dev" }]
dependencies = []
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
[tool.ruff]
select = [
    # pycodestyle errors
    "E",
    # pyflakes
    "F",
    # pycodestyle warnings
    "W",
    # isort
    "I",
    # naming
    "N",
    # upgrade
    "UP",
    # type annotations
    "ANN",
    # bandit
    "S",
    # blind except
    "BLE",
    # boolean args
    "FBT",
    # bugbear
    "B",
    # builtins
    "A",
    # commas
    "COM",
    # comprehensions
    "C4",
    # implicit string concat
    "ISC",
    # implicit packages
    "INP",
    # pie
    "PIE",
    # quotes
    "Q",
    # raise parens
    "RSE",
    # return analyzer
    "RET",
    # simplifications
    "SIM",
    # pathlib
    "PTH",
    # todos
    "TD",
    # pylint
    "PL",
    # performance
    "PERF",
    # ruff
    "RUF",
]

ignore = [
    # annotating `self` param
    "ANN101",
    # assert usage
    "S101",
    # else after return
    "RET505",
    # todo missing link
    "TD003",
]

[tool.mypy]
strict = true
